Made link on one line, overflow hidden, Issue #70

--- a/src/components/Invite.scss
+++ b/src/components/Invite.scss
@@ -81,7 +81,7 @@
 
     .link-container {
       display: flex;
-      align-items: center;
+      align-items: baseline;
       margin-bottom: 30px;
 
       input {
@@ -116,10 +116,11 @@
 
       .unique-link {
         margin-right: 20px;
+        max-width: 70%;
 
         p {
-          display: inline-block;
-          word-break: break-word;
+          white-space: nowrap;
+          overflow: hidden;
         }
       }
     }
